--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ header {
   padding: 20px 0;
 }
 
+
 .logo img { height: 55px; }
 .logo {
   display: flex;
@@ -320,6 +321,37 @@ footer {
 @media (min-width: 768px) {
   .hero { grid-template-columns: 1fr 1fr; }
   .about { grid-template-columns: 1fr 1fr; }
+}
+
+@media (max-width: 768px) {
+
+ .hero h1 {
+    font-size: 28px;
+    line-height: 1.3;
+  }
+
+  form {
+    padding: 30px;
+  }
+
+}
+@media (max-width: 768px) {
+
+  .nav {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .cta {
+    display: none;
+  }
+
 }
   </style>
 </head>
